overflow mobile fixed

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -71,6 +71,7 @@
   position: absolute;
   right: 0px;
   z-index: 1;
+  overflow-x: clip;
 }
 
 .btn-add {
@@ -86,6 +87,15 @@
   -webkit-box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34),
     4px 1px 10px 4px rgba(255, 255, 255, 0.31) inset;
   -moz-box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34);
+}
+
+.imgPreload {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 10px;
+  height: 10px;
+  opacity: 0;
 }
 
 .jumping-button {
