--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,5 +1,6 @@
 .player {
   display: flex;
+  position: relative;
   align-items: center;
   width: 190px;
   height: 50px;
@@ -26,6 +27,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    padding-left: 60px;
   }
   &:hover {
     box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34),
@@ -43,6 +45,10 @@
     // -webkit-filter: grayscale(100%) invert(100%);
     // -moz-filter: grayscale(100%);
     transition: all 225ms ease-in-out;
+    position: absolute;
+    left: 0px;
+    top: 50%;
+    transform: translateY(-50%);
 
     &:hover {
       scale: 1.1;
@@ -56,32 +62,37 @@
 }
 
 .active-player {
-  transform: translateX(0px);
+  transform: translateX(20px);
 }
 
 @media (width <= 520px) {
   .player {
-    display: flex;
-    align-items: center;
-    width: 100px;
+    // display: flex;
+    // align-items: center;
+    width: 120px;
     height: 25px;
     font-size: 12px;
     font-weight: 500;
     text-shadow: 0px 0px 5px rgba(0, 0, 0, 1);
-    gap: 16px;
-    background-color: transparent;
-    border: 1px solid hsl(39, 14%, 25%);
-    backdrop-filter: blur(2px);
-    border-bottom-left-radius: 50px;
-    border-top-left-radius: 50px;
-    color: #a2bc97;
-    box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34),
-      7px 1px 10px 7px rgba(255, 255, 255, 0.51) inset;
-    -webkit-box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34),
-      4px 1px 10px 4px rgba(255, 255, 255, 0.51) inset;
-    -moz-box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34);
-    transform: translateX(65px);
+    // gap: 16px;
+    // background-color: transparent;
+    // border: 1px solid hsl(39, 14%, 25%);
+    // backdrop-filter: blur(2px);
+    // border-bottom-left-radius: 50px;
+    // border-top-left-radius: 50px;
+    // color: #a2bc97;
+    // box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34),
+    //   7px 1px 10px 7px rgba(255, 255, 255, 0.51) inset;
+    // -webkit-box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34),
+    //   4px 1px 10px 4px rgba(255, 255, 255, 0.51) inset;
+    // -moz-box-shadow: -7px 6px 8px 0px rgba(0, 0, 0, 0.34);
+    transform: translateX(85px);
     transition: all 0.225s ease-in-out;
+
+    span {
+      padding-left: 35px;
+    }
+
     img {
       width: 35px;
       height: 35px;
@@ -99,6 +110,6 @@
   }
 
   .active-player {
-    transform: translateX(0px);
+    transform: translateX(20px);
   }
 }
